Fix description font on smaller devices

--- a/app/stylesheets/_responsive.scss
+++ b/app/stylesheets/_responsive.scss
@@ -53,6 +53,10 @@
   .step .icons {
     height: 160px;
   }
+
+  .home-page .description {
+    width: auto;
+  }
 }
 
 @media (max-width: 950px) {
